changed text to match one in the paper

--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -62,7 +62,7 @@ header#banner.hero-unit
 
 .container
   .row
-    .well These three licenses are not compatible. However you can use first two datasets and license your dataset with: CC-BY-NC-SA-4.0. Attribution for both licensors are required, notices should be kept.
+    .well These three licenses are not compatible. However, you can use first two licenses together and license your data with CC-BY-NC-SA. Attribution for both licensors are required, notices should be kept.
 
 
 footer.footer
